--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
 appdirs==1.4.4
+args==0.1.0
 certifi==2020.12.5
+clint==0.5.1
 chardet==4.0.0
 humanfriendly==9.1
 humanize==3.2.0
@@ -9,7 +11,6 @@ python-dateutil==2.8.1
 python-magic==0.4.18
 python3-wget @ git+https://github.com/bernd-wechner/python3-wget@e38979ffdf462a5cec05c5a92ff35a7630c6435b
 requests==2.25.1
+requests-toolbelt==0.9.1
 six==1.15.0
 urllib3==1.26.2
-clint==0.5.1
-requests-toolbelt==0.9.1
