Fixed the get to local_directory feature a little
Used for round trip testing.

--- a/.gitignore
+++ b/.gitignore
@@ -152,3 +152,31 @@ degoo_user
 *.png
 
 degoo_mv
+
+.settings/org.eclipse.wst.sse.core.prefs
+
+Backup/ChRbxbPpr6PRl9uU6KPtKVdrQvhr2BAA.mp4.b9vp8go5.tmp
+
+ChSzOY4q0pn-NQn2mBeRwm119wM0iBAA.avi.6t8tsasw.tmp
+
+ChSzOY4q0pn-NQn2mBeRwm119wM0iBAA.avi.ttwiuzb4.tmp
+
+tmp/ChSG0Vj9eZfJAKahAgTsskwgpqQdmhAA.mkv.6ig1w9mu.tmp
+
+tmp/Video 2 1.mkv
+
+tmp/Video 2.mkv
+
+Video 2 1.mkv
+
+Video 2.mkv
+
+Video 3 1.avi
+
+Video 3.avi
+
+Video/Video/ChSzOY4q0pn-NQn2mBeRwm119wM0iBAA.avi.91z64fxy.tmp
+
+Video/Video/Video 1.mp4
+
+xx
